dynamix/force-app/main/default/objects/Opportunity/fields/Affinity_to_inventory__c.field-meta.xml
<CustomField>
    <fullName>Affinity_to_inventory__c</fullName>
    <label>Affinity to inventory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>