dynamix/force-app/main/default/objects/Opportunity/fields/Allotment_Premium__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Premium__c</fullName>
    <label>Allotment Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>