dynamix/force-app/main/default/objects/Opportunity/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>