dynamix/force-app/main/default/objects/Opportunity/fields/Annual_Family_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Family_Income__c</fullName>
    <label>Annual Family Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 10 lakhs</fullName>
            </value>
            <value>
                <fullName>10 -20 lakhs</fullName>
            </value>
            <value>
                <fullName>20 -30 lakhs</fullName>
            </value>
            <value>
                <fullName>30 - 45 lakhs</fullName>
            </value>
            <value>
                <fullName>45 - 60 lakhs</fullName>
            </value>
            <value>
                <fullName>Above 60 lakhs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>