dynamix/force-app/main/default/objects/Opportunity/fields/Area_Sm__c.field-meta.xml
<CustomField>
    <fullName>Area_Sm__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carpet_Area</valueSetName>
    </valueSet>
</CustomField>