dynamix/force-app/main/default/objects/Opportunity/fields/Booking_Form_Shared_to_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Shared_to_Customer_Date__c</fullName>
    <label>Booking Form Shared to Customer Date</label>
    <type>Date</type>
</CustomField>