dynamix/force-app/main/default/objects/Opportunity/fields/Booking_Form_Submitted_by_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Submitted_by_Customer_Date__c</fullName>
    <label>Booking Form Submitted by Customer Date</label>
    <type>DateTime</type>
</CustomField>