dynamix/force-app/main/default/objects/Opportunity/fields/Browse_Internet_Mainly_For__c.field-meta.xml
<CustomField>
    <fullName>Browse_Internet_Mainly_For__c</fullName>
    <label>Browse Internet Mainly For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Job-hunting</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Movies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>