dynamix/force-app/main/default/objects/Opportunity/fields/Budget1__c.field-meta.xml
<CustomField>
    <fullName>Budget1__c</fullName>
    <label>Desired Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget</valueSetName>
    </valueSet>
</CustomField>