dynamix/force-app/main/default/objects/Opportunity/fields/CA_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_Auto_Number__c</fullName>
    <displayFormat>CA - {0000}</displayFormat>
    <label>CA Auto Number</label>
    <type>AutoNumber</type>
</CustomField>