dynamix/force-app/main/default/objects/Opportunity/fields/Carpet_Area_in_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_sq_ft__c</fullName>
    <label>Desired Area (in sq. ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>