dynamix/force-app/main/default/objects/Opportunity/fields/Carpet_Area_in_sq_mts__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_sq_mts__c</fullName>
    <label>Carpet Area (in sq. mts.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>