dynamix/force-app/main/default/objects/Opportunity/fields/Check_Walk_In__c.field-meta.xml
<CustomField>
    <fullName>Check_Walk_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Walk In</label>
    <type>Checkbox</type>
</CustomField>