dynamix/force-app/main/default/objects/Opportunity/fields/Company_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Company_Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company/Partnership</label>
    <type>Checkbox</type>
</CustomField>