dynamix/force-app/main/default/objects/Opportunity/fields/Cost_Sheet_Provided__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Sheet Provided</label>
    <type>Checkbox</type>
</CustomField>