dynamix/force-app/main/default/objects/Opportunity/fields/CP_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Firm_Name__c</fullName>
    <formula>Channel_Partner__r.CP_Firm_Name__c</formula>
    <label>CP Firm Name</label>
    <type>Text</type>
</CustomField>