dynamix/force-app/main/default/objects/Opportunity/fields/Craete__c.field-meta.xml
<CustomField>
    <fullName>Craete__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Craete</label>
    <type>Date</type>
</CustomField>