dynamix/force-app/main/default/objects/Opportunity/fields/Current_Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Apartment_Type__c</fullName>
    <label>Current Apartment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>