dynamix/force-app/main/default/objects/Opportunity/fields/Current_Occupancy_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy_Configuration__c</fullName>
    <label>Current Occupancy Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>