dynamix/force-app/main/default/objects/Opportunity/fields/Current_Occupied_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupied_Property_Type__c</fullName>
    <label>Current Occupied Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 RK</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>1.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>3+ BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>