dynamix/force-app/main/default/objects/Opportunity/fields/Current_Residence_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Pincode__c</fullName>
    <label>Current Residence Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>