dynamix/force-app/main/default/objects/Opportunity/fields/Current_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Type__c</fullName>
    <label>Current Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Company Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>