dynamix/force-app/main/default/objects/Opportunity/fields/Date_and_Time_of_OTP_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_OTP_Submission__c</fullName>
    <label>Date and Time of OTP Submission</label>
    <type>DateTime</type>
</CustomField>