dynamix/force-app/main/default/objects/Opportunity/fields/Date_of_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Site_Visit__c</fullName>
    <label>First Site Visit Date</label>
    <type>Date</type>
</CustomField>