dynamix/force-app/main/default/objects/Opportunity/fields/Decision_Maker_Visited__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker Visited</label>
    <type>Checkbox</type>
</CustomField>