dynamix/force-app/main/default/objects/Opportunity/fields/Desired_Locality_For_Buying__c.field-meta.xml
<CustomField>
    <fullName>Desired_Locality_For_Buying__c</fullName>
    <label>Desired Locality For Buying</label>
    <length>255</length>
    <type>Text</type>
</CustomField>