dynamix/force-app/main/default/objects/Opportunity/fields/Digital_Booking_Form_Verified_by_SM__c.field-meta.xml
<CustomField>
    <fullName>Digital_Booking_Form_Verified_by_SM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Booking Form Verified by SM</label>
    <type>Checkbox</type>
</CustomField>