dynamix/force-app/main/default/objects/Opportunity/fields/Digital_Booking_Form_Verified_by_SM_Date__c.field-meta.xml
<CustomField>
    <fullName>Digital_Booking_Form_Verified_by_SM_Date__c</fullName>
    <label>Digital Booking Form Verified by SM Date</label>
    <type>DateTime</type>
</CustomField>