dynamix/force-app/main/default/objects/Opportunity/fields/Enquiry_Source_3__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source_3__c</fullName>
    <label>Enquiry Source 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>