dynamix/force-app/main/default/objects/Opportunity/fields/Enquiry_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Sub_Source__c</fullName>
    <label>Enquiry Sub-Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>