dynamix/force-app/main/default/objects/Opportunity/fields/Enter_Building_or_Locality_Name__c.field-meta.xml
<CustomField>
    <fullName>Enter_Building_or_Locality_Name__c</fullName>
    <label>Enter Building or Locality Name</label>
    <type>TextArea</type>
</CustomField>