dynamix/force-app/main/default/objects/Opportunity/fields/EOI_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>EOI_AutoNumber__c</fullName>
    <displayFormat>EOI - {0000}</displayFormat>
    <label>EOI AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>