dynamix/force-app/main/default/objects/Opportunity/fields/EOI_Booking__c.field-meta.xml
<CustomField>
    <fullName>EOI_Booking__c</fullName>
    <label>EOI Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>