dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Approval_Stages__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Approval_Stages__c</fullName>
    <label>EOI/CA Approval Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>