dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Customer_Code__c</fullName>
    <label>EOI/CA Customer Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>