dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_End_Date__c</fullName>
    <label>EOI/CA End Date</label>
    <type>Date</type>
</CustomField>