dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Form_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Form_Sent_Date_Time__c</fullName>
    <label>EOI/CA Form Sent Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>