dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Form_Submission_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Form_Submission_Date_and_Time__c</fullName>
    <label>EOI/CA Form Submission Date and Time</label>
    <type>DateTime</type>
</CustomField>