dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Form_Submission_OTP__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Form_Submission_OTP__c</fullName>
    <label>EOI/CA Form Submission OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>