dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Number__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Number__c</fullName>
    <label>EOI/CA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>