dynamix/force-app/main/default/objects/Opportunity/fields/EOI_CA_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Payment_Received__c</fullName>
    <label>EOI/CA Payment Received</label>
    <summarizedField>EOI_CA_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>EOI_CA_Payment__c.Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>EOI_CA_Payment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>