dynamix/force-app/main/default/objects/Opportunity/fields/EOI_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Date__c</fullName>
    <label>EOI Date</label>
    <type>Date</type>
</CustomField>