dynamix/force-app/main/default/objects/Opportunity/fields/EOI_Refund_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EOI_Refund_Payment_Status__c</fullName>
    <label>EOI Refund Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>