dynamix/force-app/main/default/objects/Opportunity/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtrain</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Jain</fullName>
            </value>
            <value>
                <fullName>Malayali</fullName>
            </value>
            <value>
                <fullName>Kannad</fullName>
            </value>
            <value>
                <fullName>Marwari</fullName>
            </value>
            <value>
                <fullName>Northeastern</fullName>
            </value>
            <value>
                <fullName>North Indian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>