dynamix/force-app/main/default/objects/Opportunity/fields/Existing_Property_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Existing_Property_to_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Property to Sell</label>
    <type>Checkbox</type>
</CustomField>