dynamix/force-app/main/default/objects/Opportunity/fields/Expected_Downpayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Downpayment_Amount__c</fullName>
    <label>Expected Downpayment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>