dynamix/force-app/main/default/objects/Opportunity/fields/Expected_Timeline_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeline_to_Buy__c</fullName>
    <label>Expected Timeline to Buy</label>
    <type>Date</type>
</CustomField>