dynamix/force-app/main/default/objects/Opportunity/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Hill</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>