dynamix/force-app/main/default/objects/Opportunity/fields/First_Home_or_Upgrading__c.field-meta.xml
<CustomField>
    <fullName>First_Home_or_Upgrading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Home or Upgrading</label>
    <type>Checkbox</type>
</CustomField>