dynamix/force-app/main/default/objects/Opportunity/fields/Floor_Preference__c.field-meta.xml
<CustomField>
    <fullName>Floor_Preference__c</fullName>
    <label>Floor Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Floor</valueSetName>
    </valueSet>
</CustomField>