dynamix/force-app/main/default/objects/Opportunity/fields/Home_Loan_Sanction_Needed__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Sanction_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Loan Sanction Needed</label>
    <type>Checkbox</type>
</CustomField>